--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,8 @@ section {
     min-height: 100vh;
     padding: 1.5%;
     scroll-snap-align: start;
+    -webkit-overflow-scrolling: touch;
+    height: 100%
 }
 
 img {
