--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
 
     scroll-snap-type: y mandatory;
-    -webkit-overflow-scrolling: touch;
-    height: 100%;
+    -webkit-scroll-snap-type: mandatory;
+    -webkit-scroll-snap-coordinate: 0% 0%
 }
 
 nav {
