--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,32 @@
 /* General */
 
+:root {
+    --color-white: rgb(255, 255, 255);
+    --color-light-blue: rgb(230, 241, 255);
+    --color-light-blue-transparent: rgba(230, 241, 255, 0.75);
+    --color-blue: rgba(48, 66, 87, 1);
+    --color-light-gray: rgb(207, 207, 207);
+    --color-gray: rgb(80, 80, 80);
+    --color-dark-gray: rgba(51, 51, 51, 1);
+}
+
 body {
     font-family: 'Fira Mono', monospace;
     font-size: 2em;
-    color: rgba(51, 51, 51, 1);
-    background-color: rgba(230, 228, 227, 1);
+    color: var(--color-dark-gray);
+    background-color: var(--color-dark-gray);
 
     margin: 0;
-
-    /* scroll-snap-type: y mandatory;
-    scroll-behavior: smooth; */
 }
 
 h1 {
     font-size: 3em;
+    line-height: 0em;
 }
 
 h3 {
     font-size: 2.5em;
+    line-height: 0em;
 }
 
 h4 {
@@ -29,7 +38,7 @@ h4 {
 /* Nav Bar */
 
 nav {
-    background-color: rgba(48, 66, 87, 1);
+    background-color: var(--color-blue);
     height: 100%;
     width: 100%;
     line-height: 1.5em;
@@ -44,7 +53,7 @@ nav p {
 
     margin: 0;
     padding: 0 0 0 1%;
-    color: rgb(255, 255, 255);
+    color: var(--color-white);
 }
 
 nav ul {
@@ -63,27 +72,29 @@ nav li {
 /* Nav links */
 
 nav a {
-    color: rgb(207, 207, 207);
+    color: var(--color-light-gray);
     text-decoration: none;
 }
 
 nav a:visited {
-    color: rgb(207, 207, 207);
+    color: var(--color-light-gray);
 }
 
 nav a:hover {
-    color: rgb(255, 255, 255);
+    color: var(--color-white);
+    text-decoration: none;
 }
 
 
 /* Links */
+
 a {
-    color: rgb(80, 80, 80);
+    color: var(--color-gray);
     text-decoration: none;
 }
 
 a:visited {
-    color: rgb(80, 80, 80);
+    color: var(--color-gray);
 }
 
 a:hover {
@@ -93,12 +104,16 @@ a:hover {
 
 /* Images */
 
-img {
-    height: 2em;
-    width: 2em;
+.icons {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 }
 
 .contactimg {
+    height: 1em;
+    width: 1em;
     object-fit: contain;
 }
 
@@ -111,17 +126,17 @@ main {
     background-size: cover;
     background-repeat: no-repeat;
 
-    background-color: rgb(161, 189, 255);
+    background-color: var(--color-light-blue);
 
-    color: rgb(0, 0, 0);
+    color: var(--color-dark-gray);
 
-    height: 100vh;
+    min-height: 70vh;
     padding: 10% 15% 10% 15%;
 }
 
 #mainContain {
-    background-color: rgba(230, 241, 255, 0.75);
-    border: 0.25em solid rgba(51, 51, 51, 1);
+    background-color: var(--color-light-blue-transparent);
+    border: 0.25em solid var(--color-dark-gray);
     border-radius: 0.1em;
 
     padding: 1.5%;
@@ -132,23 +147,22 @@ main {
 section {
     min-height: 100vh;
     padding: 1.5% 20% 1.5% 20%;
-    /* scroll-snap-align: start; */
 }
 
 #about {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--color-white);
 }
 
 #experience {
-    background-color: rgb(230, 241, 255);
+    background-color: var(--color-light-blue);
 }
 
 #community {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--color-white);
 }
 
 #contact {
-    background-color: rgb(230, 241, 255);
+    background-color: var(--color-light-blue);
     min-height: 20vh;
 }
 
