--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,14 @@ body {
 
 h1 {
     font-size: 3em;
-    line-height: 0em;
 }
 
 h3 {
     font-size: 2.5em;
-    line-height: 0em;
 }
 
 h4 {
     font-size: 2.25em;
-    line-height: 0em;
 }
 
 
@@ -120,7 +117,7 @@ a:hover {
 /* Sections */
 
 main {
-    background-image: url("resources/bg.png");
+    background-image: url("resources/bg.jpg");
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
