--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ nav li {
     display: inline;
 }
 
+
 /* Nav links */
 
 nav a {
@@ -82,6 +83,26 @@ nav a:hover {
     text-decoration: none;
 }
 
+
+/* Down Arrow */
+
+#downArrow {
+    box-sizing: border-box;
+    height: 5vw;
+    width: 5vw;
+    border-style: solid;
+    border-color: var(--color-white);
+    border-width: 0em 0.25em 0.25em 0em;
+    transform: rotate(45deg);
+    transition: border-width 150ms ease-in-out;
+    margin: auto;
+}
+
+#downArrow:hover {
+    border-width: 0em 0.5em 0.5em 0em;
+    /* border-bottom-width: 4px;
+    border-right-width: 4px; */
+}
 
 /* Links */
 
@@ -127,8 +148,7 @@ main {
 
     color: var(--color-dark-gray);
 
-    min-height: 70vh;
-    padding: 10% 15% 10% 15%;
+    padding: 5% 15% 5% 15%;
 }
 
 #mainContain {
@@ -138,6 +158,10 @@ main {
 
     padding: 1.5%;
 
+    margin-bottom: 3%;
+}
+
+#mainContain h1 {
     text-align: center;
 }
 
@@ -163,3 +187,27 @@ section {
     min-height: 20vh;
 }
 
+
+/* Styling for mobile and small screens */
+
+@media screen and (max-width: 900px) {
+    h1 {
+        font-size: 2.5em;
+    }
+    
+    h3 {
+        font-size: 2.25em;
+    }
+    
+    h4 {
+        font-size: 2em;
+    }
+
+    section {
+        padding: 5%;
+    }
+
+    body nav > * {
+        display: none;
+    }
+}
