--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,12 @@
     --color-light-blue-transparent: rgba(230, 241, 255, 0.75);
     --color-blue: rgba(48, 66, 87, 1);
     --color-light-gray: rgb(207, 207, 207);
-    --color-gray: rgb(80, 80, 80);
+    --color-gray: rgb(100, 100, 100);
     --color-dark-gray: rgba(51, 51, 51, 1);
+}
+
+html {
+	scroll-behavior: smooth;
 }
 
 body {
@@ -149,6 +153,8 @@ main {
     color: var(--color-dark-gray);
 
     padding: 5% 15% 5% 15%;
+
+    min-height: 100vh;
 }
 
 #mainContain {
