--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ a:hover {
 
 main {
     background-image: url("resources/bg.jpg");
-    background-position: center;
+    background-position: center center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -197,20 +197,28 @@ section {
 /* Styling for mobile and small screens */
 
 @media (max-width: 900px), (-webkit-device-pixel-ratio : 3) {
+    body {
+        font-size: 3em;
+    }
     h1 {
-        font-size: 2.5em;
+        font-size: 3.5em;
     }
     
     h3 {
-        font-size: 2.25em;
+        font-size: 3.25em;
     }
     
     h4 {
-        font-size: 2em;
+        font-size: 3em;
+    }
+
+    main {
+        min-height: 0em;
     }
 
     section {
         padding: 5%;
+        min-height: 0em;
     }
 
     body nav > * {
