--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ section {
 /* Styling for mobile and small screens */
 
 @media (max-width: 900px), (-webkit-device-pixel-ratio : 3) {
-    h1 {
+    /* h1 {
         font-size: 2.5em;
     }
     
@@ -207,7 +207,7 @@ section {
     
     h4 {
         font-size: 2em;
-    }
+    } */
 
     main {
         min-height: 0em;
