--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ nav a:hover {
 
 a {
     color: var(--color-gray);
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 a:visited {
@@ -118,7 +118,7 @@ a:visited {
 }
 
 a:hover {
-    text-decoration: underline;
+    color: var(--color-dark-gray);
 }
 
 
