--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 :root {
+    --color-light-blue: rgb(200, 225, 255);
     --color-gray: rgb(100, 100, 100);
     --color-dark-gray: rgba(51, 51, 51, 1);
     --color-black: rgb(0, 0, 0);
@@ -9,6 +10,7 @@ body {
     font-size: 1em;
     text-align: center;
     margin: 0;
+    background-color: var(--color-light-blue);
 }
 
 h1 {
@@ -56,13 +58,4 @@ a:hover {
 #links {
     margin: 0;
     height: 25%;
-}
-
-#backgroundCanvas {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
 }
