--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 :root {
+    --color-white: rgb(250, 250, 250);
     --color-light-blue: rgb(200, 225, 255);
     --color-gray: rgb(100, 100, 100);
     --color-dark-gray: rgba(51, 51, 51, 1);
@@ -6,56 +7,67 @@
 }
 
 body {
-    font-family: 'Mukta', sans-serif;
+    font-family: sans-serif;
     font-size: 1em;
     text-align: center;
     margin: 0;
-    background-color: var(--color-light-blue);
-}
-
-h1 {
-    font-size: 5em;
-    color: var(--color-black);
 }
 
 a {
     color: var(--color-gray);
     text-decoration: none;
+
+    &:visited {
+        color: var(--color-gray);
+        text-decoration: none;
+    }
+    
+    &:hover {
+        color: var(--color-dark-gray);
+        text-decoration: underline;
+    }
 }
 
-a:visited {
-    color: var(--color-gray);
-    text-decoration: none;
-}
+.container {
+    width: 100vw;
+    height: 100vh;
 
-a:hover {
-    color: var(--color-dark-gray);
-    text-decoration: underline;
-}
-
-#container {
-    width: 50%;
-    height: 50%;
-    overflow: auto;
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
-    border: 0.25em solid black;
-}
-
-#nameContainer {
-    margin: 0;
-    height: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: var(--color-light-blue);
 }
 
-#name {
-    margin: 0;
+.card {
+    width: 50%;
+    height: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background-color: var(--color-white);
+    border: 0.25em solid black;
+    border-radius: 0.25em;
+
+    div {
+        width: 100%;
+    }
 }
 
-#links {
-    margin: 0;
-    height: 25%;
+.name {
+    display: flex;
+    justify-content: center;
+
+    h1 {
+        font-size: 5em;
+        color: var(--color-black);
+    }
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+    gap: 0.5em;
 }
